Fix misalignment of input on wide views

--- a/src/grocery_list/css/index.css
+++ b/src/grocery_list/css/index.css
@@ -60,6 +60,7 @@ a:hover{
 .app_container{
     position: relative;
     max-width: 800px;
+    margin: auto;
     padding: 1rem;
     border-radius: 0.5rem;
     background: var(--dull_white);
@@ -99,7 +100,7 @@ form{
 .form_item{
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     visibility: hidden;
 }
  
